# app-login-service

./: .env.example  Dockerfile  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: ci.yml
k8s/: deployment.yaml  ingress.yaml
migrations/: env.py
migrations/versions/: a94a702a6a31_initial_schema.py
src/app/: main.py
src/app/core/: config.py  database.py  dependencies.py  exceptions.py  rate_limit.py  security.py
src/app/models/: refresh_token.py  user.py
src/app/repositories/: base.py  token_repository.py  user_repository.py
src/app/routers/: auth.py  health.py
src/app/schemas/: auth.py  common.py  user.py
src/app/services/: auth_service.py
tests/: conftest.py  factories.py
tests/integration/: test_health.py  test_login.py  test_logout.py  test_me.py  test_refresh.py  test_register.py
tests/unit/: test_auth_service.py  test_schemas.py  test_security.py
